# zigzag-game

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
linera-backend/zigzag-score/: Cargo.toml
linera-backend/zigzag-score/src/: Cargo.toml  contract.rs  lib.rs  service.rs  state.rs
src/: contract.rs  lib.rs  service.rs  state.rs
tests/: single_chain.rs
web-frontend/: index.html  package-lock.json  package.json  vite.config.js
web-frontend/src/: App.css  App.jsx  LineraBridge.js  ZigZag.jsx
