[package]
name = "zigzag-score"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0" }
linera-sdk = { version = "0.15.0" } # Verify version matches your SDK
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
linera-sdk = { version = "0.15.0", features = ["test"] }

[[bin]]
name = "zigzag_score_contract"
path = "src/contract.rs"

[[bin]]
name = "zigzag_score_service"
path = "src/service.rs"